--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,7 +15,7 @@ params:
     - name: "Spotify"
       url: "https://open.spotify.com/show/1B8HJx7DcWpNlJZOGQuujm"
     - name: "Overcast"
-      url: "#"
+      url: "https://overcast.fm/itunes1794742428"
     - name: "RSS"
       url: "/podcast.xml"
   assets:
